Swagger-Petstore /createWithArray deleted, login changed (validations removed)
